# seti_5th_sem

./: .gitignore  README.md
lab1/: CMakeLists.txt  README.md  documentation.md
lab1/src/: addrStuff.c  addrStuff.h  copyList.c  copyList.h  listener.c  listener.h  main.c  sender.c  sender.h
lab2/: CMakeLists.txt  README.md
lab2/src/: clientMain.c  serverMain.c  stuff.c  stuff.h
lab3/: README.md
lab3/PlacesAsyncNetwork/: pom.xml
lab3/PlacesAsyncNetwork/src/main/java/ccfit/nsu/daryaevd/: AdditionalInfoLocation.java  Client.java  GeocodeLocationParser.java  HitItems.java  InfoLocation.java  Launcher.java  Main.java  OpenWeatherMain.java  PlaceDescription.java  Point.java  Weather.java  WeatherDescription.java  WeatherParser.java  Wind.java
lab3/PlacesAsyncNetwork/src/main/java/ccfit/nsu/daryaevd/location/components/: HitItems.java  InfoLocation.java  ListOfPlaces.java  Point.java
lab3/PlacesAsyncNetwork/src/main/java/ccfit/nsu/daryaevd/parsers/: DescriptionPlaceParser.java  GeocodeLocationParser.java  PlaceParser.java  WeatherParser.java
lab3/PlacesAsyncNetwork/src/main/java/ccfit/nsu/daryaevd/places/componetns/: AdditionalInfoLocation.java  Address.java  DescriptionPlace.java  InfoOpenTrip.java  InterestingPlace.java  Wiki.java
lab3/PlacesAsyncNetwork/src/main/java/ccfit/nsu/daryaevd/weather/components/: OpenWeatherMain.java  Weather.java  WeatherDescription.java  Wind.java
lab4/: README.md  pom.xml
lab4/SnakeOnlineGame/: pom.xml
lab4/SnakeOnlineGame/src/main/java/ccfit/nsu/ru/daryaevd/: Main.java
lab4/src/main/java/: module-info.java
lab4/src/main/java/ccfit/nsu/ru/daryaevd/lab4/: HelloController.java  NodeGame.java  StartApplication.java
lab4/src/main/protobuf/: snakes.proto
lab4/src/main/resources/ccfit/nsu/ru/daryaevd/lab4/: hello-view.fxml
lab5/: CMakeLists.txt  README.md
lab5/src/: common.c  common.h  commons.h  event.c  event.h  handlerConnections.c  handlerConnections.h  handlerTCP.c  handlerTCP.h  handlerUDP.c  handlerUDP.h  main.c  resolver.c  resolver.h  utils.c  utils.h
(+25 files in other folders)
